--- a/elk-stack-tls/config/kibana.yml
+++ b/elk-stack-tls/config/kibana.yml
@@ -3,7 +3,7 @@ server.host: "kib01"
 server.name: "kibana"
 elasticsearch.hosts: "https://es01:9200"
 elasticsearch.username: kibana
-elasticsearch.password: Pd5aY7UT854ck4oGXIXP
+elasticsearch.password: 2xMCP57F2vwMHN4k6PaH
 server.ssl.enabled: true
 server.ssl.certificate: /usr/share/elasticsearch/config/certificates/kib01/kib01.crt
 server.ssl.key: /usr/share/elasticsearch/config/certificates/kib01/kib01.key
