--- a/Vault-Consul-Docker/docker-compose.yml
+++ b/Vault-Consul-Docker/docker-compose.yml
@@ -18,3 +18,16 @@ services:
     command: server -config=/vault/config/vault-config.json
     cap_add:
       - IPC_LOCK
+    depends_on:
+      - consul
+
+  consul:
+    build:
+      context: ./consul
+      dockerfile: Dockerfile
+    ports:
+      - 8500:8500
+    command: agent -server -bind 0.0.0.0 -client 0.0.0.0 -bootstrap-expect 1 -config-file=/consul/config/config.json
+    volumes:
+      - ./consul/config/consul-config.json:/consul/config/config.json
+      - ./consul/data:/consul/data
